<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="HardcodedText"
    tools:showIn="@layout/activity_main_two">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="ContentDescription">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/swatchHistory"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textAppearance="@style/ColorText.Digit"
                app:cornerRadius="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/viewFavorites"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorites"
                android:textAppearance="@style/ColorText.Digit"
                app:cornerRadius="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addFavorites"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addToFavorite"
                android:textAppearance="@style/ColorText.Digit"
                app:cornerRadius="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/moreInfo"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moreInfo"
                android:textAppearance="@style/ColorText.Digit"
                app:cornerRadius="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pickImage"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectImage"
                android:textAppearance="@style/ColorText.Digit"
                app:cornerRadius="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/randomColor"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/randomColor"
                android:textAppearance="@style/ColorText.Digit"
                app:cornerRadius="0dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/swatchLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="5dp">

                    <codes.side.andcolorpicker.view.swatch.SwatchView
                        android:id="@+id/swatchView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.card.MaterialCardView>

            </com.google.android.material.card.MaterialCardView>

            <codes.side.andcolorpicker.hsl.HSLColorPickerSeekBar
                android:id="@+id/hueColorPickerSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hslColoringMode="pure"
                app:hslMode="hue" />

            <codes.side.andcolorpicker.hsl.HSLColorPickerSeekBar
                android:id="@+id/lightnessColorPickerSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hslColoringMode="pure"
                app:hslMode="lightness" />

            <codes.side.andcolorpicker.hsl.HSLColorPickerSeekBar
                android:id="@+id/saturationColorPickerSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hslColoringMode="pure"
                app:hslMode="saturation" />

            <codes.side.andcolorpicker.alpha.HSLAlphaColorPickerSeekBar
                android:id="@+id/alphaColorPickerSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>